<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/money"
            style="@style/ProdandListen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:text="0$" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/spotify"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cartLayout"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_shopping_cart_24"
            app:layout_constraintEnd_toStartOf="@+id/cartitems" />

        <TextView
            android:id="@+id/cartitems"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:text="0"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/productView"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/cartLayout"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/bigtext"
        android:text="Name of the track"
        android:id="@+id/trackname"
        app:layout_constraintTop_toBottomOf="@+id/productView"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prodandlistens"
        app:layout_constraintTop_toBottomOf="@+id/trackname">

        <TextView
            style="@style/ProdandListen"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="Default"
            android:id="@+id/prodyear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            style="@style/ProdandListen"
            android:text="Default"
            android:id="@+id/listens"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/prodyear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/priceandrates"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/prodandlistens">

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rate"
            android:isIndicator="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:padding="0sp"
            android:rating="3.0"
            android:stepSize="0.2"
            android:progressTint="@color/green"
            android:progressBackgroundTint="@color/white"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:minWidth="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintWidth_percent="0.4">

        </androidx.appcompat.widget.AppCompatRatingBar>

        <TextView
            android:id="@+id/price"
            style="@style/bigtext"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:text="25$/m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceandrates"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/basic"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Basic"
            android:textColor="@color/black"
            android:checkable="true"
            android:checked="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/deluxe"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deluxe"
            android:textColor="@color/black"
            android:checkable="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/premium"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Premium"
            android:textColor="@color/black"
            android:checkable="true"/>
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/addtocart"
        android:layout_width="154dp"
        android:layout_height="59dp"
        android:text="Add to cart"
        style="@style/buttonstyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/types" />

    <Button
        android:id="@+id/next"
        android:layout_width="154dp"
        android:layout_height="59dp"
        android:layout_marginEnd="28dp"
        style="@style/buttonstyle"
        android:text="NEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/types"
        app:layout_constraintVertical_bias="0.589" />

    <Button
        android:layout_width="154dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:id="@+id/borrow"
        style="@style/buttonstyle"
        android:text="BORROW"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/types"
        app:layout_constraintVertical_bias="0.589" />


</androidx.constraintlayout.widget.ConstraintLayout>